@@ -10,6 +10,9 @@ What's New in Python 3.6.1 final?
 Core and Builtins
 -----------------
 
+- bpo-29859: Show correct error messages when any of the pthread_* calls in
+  thread_pthread.h fails.
+
 - bpo-29600: Fix wrapping coroutine return values in StopIteration.
 
 - bpo-28856: Fix an oversight that %b format for bytes should support objects
